Use 100% height and fixed position for mobile chrome.
- Viewport height on mobile chrome is now always based on
  the height of the screen regardless of whether or not the
  URL bar is present. This causes fixed areas that aren't
  scrollable (modal footers) to appear off screen when the
  URL bar is present. If height is instead specified as
  100% and the position is fixed for the container (modal-content),
  then things seem to behave (and resize) as expected.

--- a/modal.less
+++ b/modal.less
@@ -26,7 +26,9 @@
     .modal-content {
       border: none;
       border-radius: 0;
-      height: 100vh;
+      //height: 100vh;
+      height: 100%;
+      position: fixed;
       display: flex;
       flex-direction: column;
     }
